--- a/docs/resources/http.md.erb
+++ b/docs/resources/http.md.erb
@@ -23,7 +23,7 @@ This resource first became available in v1.10.0 of InSpec.
 
 An `http` resource block declares the configuration settings to be tested:
 
-    describe http('url', auth: {user: 'user', pass: 'test'}, params: {params}, method: 'method', headers: {headers}, data: data, open_timeout: 60, read_timeout: 60, ssl_verify: true) do
+    describe http('url', auth: {user: 'user', pass: 'test'}, params: {params}, method: 'method', headers: {headers}, data: data, open_timeout: 60, read_timeout: 60, ssl_verify: true, max_redirects: 3) do
       its('status') { should eq number }
       its('body') { should eq 'body' }
       its('headers.name') { should eq 'header' }
@@ -40,6 +40,7 @@ where
 * `open_timeout` may be specified for a timeout for opening connections (default to 60)
 * `read_timeout` may be specified for a timeout for reading connections (default to 60)
 * `ssl_verify` may be specified to enable or disable verification of SSL certificates (default to `true`)
+* `max_redirects` may be specified to control how many HTTP Redirects to follow (defaults to `0`)
 
 <br>
 
@@ -84,7 +85,7 @@ In InSpec 2.0, the HTTP test will automatically execute remotely whenever InSpec
 
 ## Parameters
 
-* `url`, `auth`, `params`, `method`, `headers`, `data`, `open_timeout`, `read_timeout`, `ssl_verify`
+* `url`, `auth`, `params`, `method`, `headers`, `data`, `open_timeout`, `read_timeout`, `ssl_verify`, `max_redirects`
 
 ## Parameter Examples
 
@@ -165,6 +166,17 @@ In InSpec 2.0, the HTTP test will automatically execute remotely whenever InSpec
 
     describe http('http://localhost:8080/ping',
                   ssl_verify: true) do
+      ...
+    end
+
+<br>
+
+### max_redirects
+
+`max_redirects` may be specified to control how many HTTP Redirects to follow (default to 0).
+
+    describe http('http://localhost:8080/ping',
+                  max_redirects: 3) do
       ...
     end
 
