--- a/docs/resources/azure_virtual_machine.md.erb
+++ b/docs/resources/azure_virtual_machine.md.erb
@@ -262,7 +262,7 @@ If boot diagnostics are enabled for the machine they will be saved in a storage 
 
 There are a number of built in comparison operators that are available to test the result with an expected value.
 
-For information on all that are available please refer to the [Inspec Matchers Reference](https://www.inspec.io/docs/reference/matchers/) page.
+For information on all that are available please refer to the [InSpec Matchers Reference](https://www.inspec.io/docs/reference/matchers/) page.
 
 ### boot\_diagnostics?
 
