--- a/www/source/legal/trademark-policy.html.slim
+++ b/www/source/legal/trademark-policy.html.slim
@@ -1,5 +1,5 @@
 ---
-title: Inspec - Trademark Policy
+title: InSpec - Trademark Policy
 ---
 .row.margin-both-offset.columns
   .block
@@ -15,7 +15,7 @@ title: Inspec - Trademark Policy
     p This Policy, prepared by Chef, sets out rules for proper use of the Chef Marks. Some, but not all, Chef Marks include the following:
     ul
       li Chef and Chef Logo
-      li Inspec and Inspec Logo
+      li InSpec and InSpec Logo
       li Compliance at Velocity
       li CODE CAN
       li RULE THE CLOUD
