--- a/docs/resources/filesystem.md.erb
+++ b/docs/resources/filesystem.md.erb
@@ -19,12 +19,16 @@ This resource is distributed along with InSpec itself. You can use it automatica
 
 This resource first became available in v1.51.0 of InSpec.
 
+### Note
+
+Versions of this resource in InSpec prior to 3.5.x offered a property `size`, which returned a value in GB when on Windows and a value in KB on Linux, though it was documented to always return KB.  All new code should use `size_kb` which is unit-stable.
+
 ## Syntax
 
 A `filesystem` resource block declares tests for disk space in a partition:
 
     describe filesystem('/') do
-      its('size') { should be >= 32000 }
+      its('size_kb') { should be >= 32000 }
       its('free') { should be >= 5000000 }
       its('percent_free') { should be >= 20 }
       its('type') { should cmp 'ext4' }
@@ -33,7 +37,7 @@ A `filesystem` resource block declares tests for disk space in a partition:
 where
 
 * `filesystem('/')` states that the resource will look at the root (/) partition.
-* `size` is the total partition size and is measured in kilobytes (KB).
+* `size_kb` is the total partition size and is measured in kilobytes (KB).
 * `free` is the available space on the partition and is measured in kilobytes (KB).
 * `percent_free` is the percentage of available free space, and ranges from 0 to 100.
 
@@ -46,7 +50,7 @@ The following examples show how to use this InSpec audit resource.
 ### Test if the root partition is greater than 32000 KB
 
     describe filesystem('/') do
-      its('size') { should be >= 32000 }
+      its('size_kb') { should be >= 32000 }
     end
 
 <br>
